feat(data): added DTOs and AppDbContext, configured model mappings

--- a/API/MuhammedCo.Core/MuhammedCo.Core.csproj
+++ b/API/MuhammedCo.Core/MuhammedCo.Core.csproj
@@ -12,4 +12,11 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO%27s\" />
+    <Folder Include="UnitOfWorks\" />
+    <Folder Include="Services\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
