--- a/API/MuhammedCo.Service/MuhammedCo.Service.csproj
+++ b/API/MuhammedCo.Service/MuhammedCo.Service.csproj
@@ -11,4 +11,15 @@
     <PackageReference Include="FluentValidation" Version="12.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exceptions\" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Hashing\" />
+    <Folder Include="Mappings\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MuhammedCo.Core\MuhammedCo.Core.csproj" />
+  </ItemGroup>
+
 </Project>
