feat(api): added RepoServiceModule for Autofac dependency injection

--- a/API/MuhammedCo.Core/MuhammedCo.Core.csproj
+++ b/API/MuhammedCo.Core/MuhammedCo.Core.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.14.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\UpdateDTOs\" />
+  </ItemGroup>
+
 </Project>
