--- a/API/MuhammedCo/MuhammedCo.API.csproj
+++ b/API/MuhammedCo/MuhammedCo.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +19,13 @@
   <ItemGroup>
     <ProjectReference Include="..\MuhammedCo.Repository\MuhammedCo.Repository.csproj" />
     <ProjectReference Include="..\MuhammedCo.Service\MuhammedCo.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Middlewares\" />
+    <Folder Include="Content\" />
+    <Folder Include="Filters\" />
   </ItemGroup>
 
 </Project>
